// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ellipsis should default lines to 1 and max-width to 100% 1`] = `
Object {
  "display": "inline-block",
  "maxWidth": "100%",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`ellipsis should pass parameter of type integer to the value of max-width 1`] = `
Object {
  "display": "inline-block",
  "maxWidth": 300,
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`ellipsis should pass parameter to the value of max-width 1`] = `
Object {
  "display": "inline-block",
  "maxWidth": "300px",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`ellipsis should truncate text after 3 lines 1`] = `
Object {
  "display": "-webkit-box",
  "maxWidth": "100%",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "webkitBoxOrient": "vertical",
  "webkitLineClamp": 3,
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`ellipsis should truncate text after 3 lines and 500px max-width 1`] = `
Object {
  "display": "-webkit-box",
  "maxWidth": "500px",
  "overflow": "hidden",
  "textOverflow": "ellipsis",
  "webkitBoxOrient": "vertical",
  "webkitLineClamp": 3,
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;
